# ThePathfinder2000

./: .gitignore  CMakeLists.txt  README.md
C_PATH/: CMakeLists.txt
C_PATH/include/: c_path.h
C_PATH/source/: c_path.cpp
Logger/: CMakeLists.txt
Logger/include/: logger.h
Logger/source/: logger.cpp
Pathfinding/: CMakeLists.txt
Pathfinding/lib/ImGUI/: imconfig.h
Pathfinding/src/: DEFINITIONS.h  defined.h  macro.h  main.cpp
Pathfinding/src/Managers/AssetManager/: AssetManager.cpp  AssetManager.h
Pathfinding/src/Managers/InputManager/: InputManager.cpp  InputManager.h
Pathfinding/src/StateMachine/: State.h  StateMachine.cpp  StateMachine.h
Pathfinding/src/StateMachine/GameState/: GameState.cpp  GameState.h
Pathfinding/src/StateMachine/MainMenu/: MainMenuState.cpp  MainMenuState.h
Pathfinding/src/StateMachine/PauseState/: PauseState.cpp  PauseState.h
Pathfinding/src/StateMachine/SplashState/: SplashState.cpp  SplashState.h
Pathfinding/src/UI/: MainMenuWidget.cpp  MainMenuWidget.h  UIElement.cpp  UIElement.h  UIWidget.cpp  UIWidget.h
Pathfinding/src/UI/Events/: UIEvent.h  UIEventListener.cpp  UIEventListener.h
Pathfinding/src/UI/UIElements/: UIButton.cpp  UIButton.h  UICheckbox.cpp  UICheckbox.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UISprite.cpp  UISprite.h  UIText.cpp  UIText.h  UIWidget.cpp  UIWidget.h
Pathfinding/src/UI/UIElements/UI_Button/: UIButton.cpp  UIButton.h
Pathfinding/src/UI/UIElements/UI_CheckBox/: UICheckbox.cpp  UICheckbox.h
Pathfinding/src/UI/UIElements/UI_Image/: UIImage.cpp  UIImage.h
Pathfinding/src/UI/UIElements/UI_Text/: UIText.cpp  UIText.h
Pathfinding/src/UI/UIElements/UI_TextField/: UITextField.cpp  UITextField.h
Pathfinding/src/UI/Widget/: GameWidget.cpp  GameWidget.h  MainMenuWidget.cpp  MainMenuWidget.h  PauseWidget.cpp  PauseWidget.h  SplashWidget.cpp  SplashWidget.h  UIWidget.cpp  UIWidget.h
Pathfinding/src/UI/Widget/GameWidget/: GameWidget.cpp  GameWidget.h
Pathfinding/src/UI/Widget/MainMenuWidget/: MainMenuWidget.cpp  MainMenuWidget.h
Pathfinding/src/UI/Widget/PauseWidget/: PauseWidget.cpp  PauseWidget.h
Pathfinding/src/UI/Widget/SplashWidget/: SplashWidget.cpp  SplashWidget.h
Pathfinding/src/core/: Game.cpp  Game.h
