# CMakeList.txt : fichier projet CMake de niveau supérieur

cmake_minimum_required (VERSION 3.8)

# Activez Rechargement à chaud pour les compilateurs MSVC si cela est pris en charge.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT 
      "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project(ThePathfinder2000)

set(LOGGER_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/Logger/include)

add_subdirectory(Logger)

add_subdirectory(Pathfinding)
